Fixed: Hovered buttons have wrong color when using Adwaita theme

--- a/themes/adwaita.css
+++ b/themes/adwaita.css
@@ -343,7 +343,7 @@ x-button[skin="normal"] {
   }
   @media (hover: hover) {
     &:hover {
-      background-color: red;
+      background-color: color(srgb 0 0 0 / 0.12);
     }
   }
   &[pressed] {
